--- a/css/_sass/partials/_layout.scss
+++ b/css/_sass/partials/_layout.scss
@@ -5,6 +5,22 @@
 $dim-site-width: 960px;
 $font-headers: 'BertholdBaskervilleRegular', 'Trebuchet MS', 'Times New Roman', sans-serif;
 
+h1, h2 {
+    font-weight: lighter;
+    letter-spacing: -2px;
+    color: $color-font-header;
+    margin-bottom: 0px;
+    font-family: $font-headers;
+}
+
+h1 {
+    font-size: 25px;
+}    
+
+h2 {
+    font-size: 18px;
+    color: lighten($color-font-header, 50%);
+}    
 
 body {
     width: 100%;
@@ -23,15 +39,64 @@ body {
 
 header {
     margin-top: 50px;
-    font-family: $font-headers;
     
-    h1, h2 {
-        font-weight: lighter;
-        letter-spacing: -2px;
-        color: $color-font-header;
+    div#logo {
+        float: left;
+        width: 350px;
+        border: 0px solid #000;
+        
+        img {
+            float: left;
+            margin-right: 10px;
+        }
+        
+        h1 {
+            font-size: 30px;
+            margin-top: 18px;
+        }
+
+        h2 {
+            margin-top: 4px;
+        }
     }
     
-    h2 {
-        color: lighten($color-font-header, 50%);
+    nav {
+        float: right;
+        margin-top: 60px;
+        font-family: $font-headers;
+        
+        li {
+            display: block;
+            float: left;            
+            
+            
+            a {
+                display: block;
+                border: 1px solid lighten($color-font-header, 80%);
+                border-width: 0px 0px 3px 0px;
+                width: 100px;
+                margin-left: 10px;
+                cursor: pointer;
+                text-align: center;
+                font-size: 18px;
+                
+                &, &:active {
+                    color: #000;
+                }
+                
+                &:hover {
+                    border-color: $color-menu-underline;
+                }
+            }
+        }
     }
+    
+    hr {
+        border-color: #fff;
+        clear: both;
+    } 
+}
+
+div#main {
+    margin-top: 80px;
 }
