--- a/css/_sass/partials/_colors.scss
+++ b/css/_sass/partials/_colors.scss
@@ -3,5 +3,8 @@
    ========================================================================== */
 
 $color-background: #f2f2f2;
+$color-main-background: #ffffff;
 $color-font-header: #000;
 $color-menu-underline: #e82224;
+$color-footer-background: #414141;
+$color-footer-font: #ffffff;
