--- a/css/_sass/partials/_layout.scss
+++ b/css/_sass/partials/_layout.scss
@@ -3,7 +3,8 @@
    ========================================================================== */
 
 $dim-site-width: 800px;
-$font-headers: 'bvregular', 'Trebuchet MS', 'Times New Roman', sans-serif;
+//$font-headers: 'bvregular', 'Trebuchet MS', 'Times New Roman', sans-serif;
+$font-headers: 'LinuxLibertineORegular', 'Trebuchet MS', 'Times New Roman', sans-serif;
 $font-body: 'Trebuchet MS', 'Times New Roman', sans-serif;
 
 h1, h2 {
