--- a/css/_sass/partials/_fonts.scss
+++ b/css/_sass/partials/_fonts.scss
@@ -11,5 +11,64 @@
          url('../fonts/bv.svg#bvregular') format('svg');
     font-weight: normal;
     font-style: normal;
+}
+
+@font-face {
+    font-family: 'LinuxLibertineORegular';
+    src: url('../fonts/linlibertine_re-4.7.5ro-webfont.eot');
+    src: url('../fonts/linlibertine_re-4.7.5ro-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/linlibertine_re-4.7.5ro-webfont.woff') format('woff'),
+         url('../fonts/linlibertine_re-4.7.5ro-webfont.ttf') format('truetype'),
+         url('../fonts/linlibertine_re-4.7.5ro-webfont.svg#LinuxLibertineORegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'LinuxLibertineOItalic';
+    src: url('../fonts/linlibertine_it-4.2.6ro-webfont.eot');
+    src: url('../fonts/linlibertine_it-4.2.6ro-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/linlibertine_it-4.2.6ro-webfont.woff') format('woff'),
+         url('../fonts/linlibertine_it-4.2.6ro-webfont.ttf') format('truetype'),
+         url('../fonts/linlibertine_it-4.2.6ro-webfont.svg#LinuxLibertineOItalic') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'LinuxLibertineOBold';
+    src: url('../fonts/linlibertine_bd-4.1.5ro-webfont.eot');
+    src: url('../fonts/linlibertine_bd-4.1.5ro-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/linlibertine_bd-4.1.5ro-webfont.woff') format('woff'),
+         url('../fonts/linlibertine_bd-4.1.5ro-webfont.ttf') format('truetype'),
+         url('../fonts/linlibertine_bd-4.1.5ro-webfont.svg#LinuxLibertineOBold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'LinuxLibertineOBoldItalic';
+    src: url('../fonts/linlibertine_bi-4.1.0ro-webfont.eot');
+    src: url('../fonts/linlibertine_bi-4.1.0ro-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/linlibertine_bi-4.1.0ro-webfont.woff') format('woff'),
+         url('../fonts/linlibertine_bi-4.1.0ro-webfont.ttf') format('truetype'),
+         url('../fonts/linlibertine_bi-4.1.0ro-webfont.svg#LinuxLibertineOBoldItalic') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'LinuxLibertineOCRegular';
+    src: url('../fonts/linlibertine_c-4.0.4ro-webfont.eot');
+    src: url('../fonts/linlibertine_c-4.0.4ro-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/linlibertine_c-4.0.4ro-webfont.woff') format('woff'),
+         url('../fonts/linlibertine_c-4.0.4ro-webfont.ttf') format('truetype'),
+         url('../fonts/linlibertine_c-4.0.4ro-webfont.svg#LinuxLibertineOCRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
 
 }
